--- a/config/locales/query_report.yml
+++ b/config/locales/query_report.yml
@@ -13,3 +13,7 @@ es:
   views:
     pagination:
       truncate: '...'
+      next: 'Próximo'
+      previous: 'Anterior'
+      last: 'Último'
+      first: 'Primero'
